--- a/index.html
+++ b/index.html
@@ -12,8 +12,68 @@
 </head>
 <body>
 
-    
+<!-- ==========toper part start============ -->
+<div id="toper">
+<div class="container">
+<div class="main">
+<div class="mobile">
+<a href="#"><i class="fa fa-phone" aria-hidden="true"></i></a>
+<a href="tel:123-456-7890">01757890158</a>
+</div>
+<div class="email">
+<a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+<a href="mailto:ffarhaz800@gmail.com">ffarhaz800@gmail.com</a>
+</div>
+<div class="logo">
+<a href="#">YOUTH <span>IT</span></a>
+</div>
+</div>
+</div>
+</div>
+<!-- =========toper part end============== -->
 
+
+
+<!-- ==========navbar part start============= -->
+<nav id="navbar" class="navbar navbar-expand-lg bg-body-tertiary col-lg-10 offset-lg-3">
+    <div class="container">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+        <form class="d-flex col-lg-6 form" role="search">
+            <input class="form-control " type="search" placeholder="Search here..." aria-label="Search">
+            <button class="btn btn btn-dark" type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
+          </form>
+        <div class="dropdown registration">
+            <button class="btn btn-secondary registration-icon" type="button" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
+                <i class="fa fa-user" aria-hidden="true"></i>
+              </button>
+              <ul class="dropdown-menu sign-up" aria-labelledby="dropdownMenu2">
+                <li><button id="#login" class="dropdown-item" type="button">login</button></li>
+                <li><button id="#sign in" class="dropdown-item" type="button">sign in</button></li>
+              </ul>
+        </div>
+
+        <div class="product-btn">
+        <div class="btn-1">
+            <button type="button" class="btn btn-primary"><p>PC BUILDER<span>MAKE YOUR COMPUTER</span></SPAn></p>
+                <i class="fa fa-desktop" aria-hidden="true"></i>
+            </button>
+        </div>
+        <div class="btn-2">
+            <button type="button" class="btn btn-primary"><p>PC BUILDER<span>MAKE YOUR COMPUTER</span></SPAn></p>
+                <i class="fa fa-desktop" aria-hidden="true"></i>
+            </button>
+        </div>
+        </div>
+      </div>
+    </div>
+  </nav>
+<!-- ================navbar part end================ -->
+
+
+<!-- ==========product box start=============== -->
 <section id="product">
     <div class="container container-sm container-md container-xl container-xxl container-fluid">
         <div class="col-lg-3 offset-lg-5 col-md-3 offset-md-5 col-sm-2 offset-sm-5">
@@ -491,8 +551,43 @@
         </div>
     </div>
 </section>
+<!-- ===========product box end================ -->
+
+<!-- ============footer part start============= -->
+<footer id="footer">
+<div class="container">
+    <div class="main row">
+    <div class="payment col-lg-3">
+    <div class="details">    <p>pay for</p></div>
+    <div class="img"><img src="image/bkash-nagad-rocket-all.5561410.jpg" alt=""></div>
+    </div>
+
+    <div class="customer-service col-lg-3">
+    <h2>Customer Service</h2>
+    <div class="contact-us">
+        <i class="fa fa-angle-double-right" aria-hidden="true"></i>
+        <a href="#">contact-us</a>
+    </div>
+    </div>
 
 
+    <div class="facebook-page col-lg-3">
+        <h2>Facebook page</h2>
+        <div class="img">
+            <img src="image/339912506_958266292251350_3781188513403401077_n.jpg" alt="">
+        </div>
+        </div>
+
+        <div class="contact col-lg-3">
+            <h2>Contact-us</h2>
+            <div class="contact-us">
+               <p>Follow-us</p>
+            </div>
+            </div>
+    </div>
+</div>
+</footer>
+<!-- ============footer part end=============== -->
 
 
 
